--- a/FinalChallenge/FinalChallenge/Base.lproj/Main.storyboard
+++ b/FinalChallenge/FinalChallenge/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="nKE-Kh-ZdC">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -24,7 +24,7 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="Vdm-Fd-82M">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8tI-Nj-xtR" customClass="FBSDKLoginButton">
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8tI-Nj-xtR" customClass="FBSDKLoginButton">
                                 <rect key="frame" x="19" y="464" width="337" height="66"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -38,7 +38,7 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XK1-Im-5bh">
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XK1-Im-5bh">
                                 <rect key="frame" x="19" y="541" width="337" height="66"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -55,93 +55,15 @@
                                     <action selector="singUp:" destination="BYZ-38-t0r" eventType="touchUpInside" id="z4K-6H-FLe"/>
                                 </connections>
                             </button>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RFg-2c-4Va">
-                                <rect key="frame" x="19" y="296" width="337" height="66"/>
-                                <subviews>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ijS-nm-ucv">
-                                        <rect key="frame" x="58" y="18" width="251" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="251" id="76h-6v-Qvd"/>
-                                            <constraint firstAttribute="height" constant="30" id="Qrh-PK-ITp"/>
-                                        </constraints>
-                                        <nil key="textColor"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kqD-ba-ofu">
-                                        <rect key="frame" x="3" y="8" width="50" height="50"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="50" id="WoG-5h-Fnn"/>
-                                            <constraint firstAttribute="height" constant="50" id="aLJ-3P-pQ9"/>
-                                        </constraints>
-                                    </imageView>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="66" id="600-Lf-gai"/>
-                                    <constraint firstItem="kqD-ba-ofu" firstAttribute="leading" secondItem="RFg-2c-4Va" secondAttribute="leading" constant="3" id="9kD-rP-eZY"/>
-                                    <constraint firstItem="kqD-ba-ofu" firstAttribute="top" secondItem="RFg-2c-4Va" secondAttribute="top" constant="8" id="F1m-8r-FGu"/>
-                                    <constraint firstItem="ijS-nm-ucv" firstAttribute="top" secondItem="kqD-ba-ofu" secondAttribute="bottom" constant="-40" id="UVa-Uh-eit"/>
-                                    <constraint firstItem="ijS-nm-ucv" firstAttribute="leading" secondItem="kqD-ba-ofu" secondAttribute="trailing" constant="5" id="gta-cN-BVd"/>
-                                    <constraint firstAttribute="width" constant="337" id="ra9-j4-0uU"/>
-                                </constraints>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                        <integer key="value" value="33"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                            </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tyU-W7-NX3">
-                                <rect key="frame" x="19" y="373" width="337" height="66"/>
-                                <subviews>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="v4j-NB-5he">
-                                        <rect key="frame" x="58" y="18" width="251" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="30" id="kTM-ZE-iuM"/>
-                                            <constraint firstAttribute="width" constant="251" id="lTp-Zb-ZWH"/>
-                                        </constraints>
-                                        <nil key="textColor"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dv5-Fo-Kjb">
-                                        <rect key="frame" x="3" y="8" width="50" height="50"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="50" id="hmg-4u-fEe"/>
-                                            <constraint firstAttribute="width" constant="50" id="jgS-Or-elw"/>
-                                        </constraints>
-                                    </imageView>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="66" id="2GT-No-sd1"/>
-                                    <constraint firstItem="v4j-NB-5he" firstAttribute="leading" secondItem="dv5-Fo-Kjb" secondAttribute="trailing" constant="5" id="68Y-U3-rX8"/>
-                                    <constraint firstItem="dv5-Fo-Kjb" firstAttribute="top" secondItem="tyU-W7-NX3" secondAttribute="top" constant="8" id="8Gh-m0-UPT"/>
-                                    <constraint firstAttribute="width" constant="337" id="a2g-On-gQg"/>
-                                    <constraint firstItem="dv5-Fo-Kjb" firstAttribute="leading" secondItem="tyU-W7-NX3" secondAttribute="leading" constant="3" id="aRf-FP-JF7"/>
-                                    <constraint firstItem="v4j-NB-5he" firstAttribute="top" secondItem="dv5-Fo-Kjb" secondAttribute="bottom" constant="-40" id="dF8-IY-rl7"/>
-                                </constraints>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                        <integer key="value" value="33"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="XK1-Im-5bh" firstAttribute="top" secondItem="8tI-Nj-xtR" secondAttribute="bottom" constant="11" id="4Qs-Ns-OZ2"/>
-                            <constraint firstItem="RFg-2c-4Va" firstAttribute="centerX" secondItem="Vdm-Fd-82M" secondAttribute="centerX" id="8ml-4K-p1i"/>
                             <constraint firstItem="XK1-Im-5bh" firstAttribute="centerX" secondItem="8tI-Nj-xtR" secondAttribute="centerX" id="9EM-Gb-Asa"/>
-                            <constraint firstItem="tyU-W7-NX3" firstAttribute="centerX" secondItem="RFg-2c-4Va" secondAttribute="centerX" id="AkZ-wx-mf8"/>
-                            <constraint firstItem="Vdm-Fd-82M" firstAttribute="top" secondItem="RFg-2c-4Va" secondAttribute="bottom" constant="-362" id="DLb-bv-1th"/>
-                            <constraint firstItem="8tI-Nj-xtR" firstAttribute="top" secondItem="tyU-W7-NX3" secondAttribute="bottom" constant="25" id="GNz-7Y-e06"/>
                             <constraint firstItem="Vdm-Fd-82M" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="VSN-gA-lrF"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Vdm-Fd-82M" secondAttribute="bottom" id="ZYu-1a-UOB"/>
-                            <constraint firstItem="8tI-Nj-xtR" firstAttribute="centerX" secondItem="tyU-W7-NX3" secondAttribute="centerX" id="amg-UQ-Ydn"/>
                             <constraint firstAttribute="trailing" secondItem="Vdm-Fd-82M" secondAttribute="trailing" id="kGJ-V4-P8Z"/>
                             <constraint firstItem="Vdm-Fd-82M" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="u1m-ag-GnJ"/>
-                            <constraint firstItem="tyU-W7-NX3" firstAttribute="top" secondItem="RFg-2c-4Va" secondAttribute="bottom" constant="11" id="xJG-oC-kfL"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="oCh-Wd-n6s">
@@ -153,8 +75,6 @@
                     </navigationItem>
                     <connections>
                         <outlet property="facebookLoginBtn" destination="8tI-Nj-xtR" id="Rq1-md-Mwa"/>
-                        <outlet property="password" destination="v4j-NB-5he" id="f7t-V8-H1k"/>
-                        <outlet property="userName" destination="ijS-nm-ucv" id="lQS-Wn-kgp"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -203,24 +123,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uqa-eY-bpX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3441" y="1110"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="kGR-SF-YiQ">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="nKE-Kh-ZdC" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Iu3-OC-g2p">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="ORq-Fk-ydz"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="aQc-8k-Stf" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="785" y="287"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="VOf-sa-I1A">
